* Map marker hover bounce not working on lazy load map - FIXED
* Cat filter on map breaks the design - FIXED
* GD > Best of listings widget don't show empty categories - CHANGED
* UpSolution Core plugin compatibility - ADDED
* Hook added to extend "Admin Only" edit visibility to other user roles - ADDED
* Field to filter posts by Service Distance added - ADDED

= 2.1.0.10 =
* Show x stars back instead of rating type name on hover of ratings - CHANGED
* Field description is missing for radio/checkbox multiselect fields - FIXED
* Tool added to regenerate thumbnails for the post images - ADDED
* Map can no longer be moved if no records found message shown - FIXED
* Elementor loop shows wrong post class for first element - FIXED
* Featured field shows checked for empty value when default set to checked - FIXED
* GD Listings elementor skin element missing background image - FIXED
* Add post ID in gd_post_meta,gd_post_badges and gd_dynamic_content - ADDED

= 2.1.0.9 =
* Show markers for custom Elementor posts loop not working - FIXED
* Export CSV opens in browser instead of download on some sites - FIXED
* Search keyword don't matches with the word start with new line character - FIXED
* Category checkbox hierarchy no longer showing option to set default category with AUI - FIXED
* Show rating type name on hover of ratings instead of x stars - ADDED
* Image of screenshot of youtube link will now open in lightbox if link to iframe lightbox selected - ADDED/CHANGED
* Pending post shows 404 to logged in post author - FIXED
* OpenGraph settings not working properly with recent Yoast SEO - FIXED

= 2.1.0.8 =
* Sometimes published email shows broken post link when cache is enabled - FIXED
* Badge class not added to post class with AUI Bootstrap style - FIXED
* Add setting to allow users to set no. of tags to show in tags list in add/edit listing form - ADDED
* Listings shows comments even comments are disable for post type - FIXED